# programming-assignment-5610456

./: README.md
Boids/: .gitignore  CMakeLists.txt
Boids/include/: Flock.h  MainWindow.h  NGLScene.h  WindowParams.h  boid.h
Boids/shaders/: BoidFragment.glsl  BoidVertex.glsl  ParticleVertex.glsl
Boids/src/: Flock.cpp  MainWindow.cpp  NGLScene.cpp  NGLSceneMouseControls.cpp  boid.cpp  main.cpp
Boids/ui/: MainWindow.ui
